# xhshow

./: .gitignore  __init__.py  pyproject.toml  requirements.txt
code/: __init__.py  captcha.py  get_all_captcha_imgs.py
encrypt/: __init__.py  generate_local_id.py  xs_encrypt.py  xsc_encrypt_v2.py
native/: main.7e49175.js  main.c7dc100.css  runtime-main.a0c578e.js  vendor-main.e645eae.js
schemas/xsc/: redcaptcha.py
xhs/: __init__.py
xhs/request/: AsyncRequestFramework.py  __init__.py  file.py  note.py
