[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xhshow"
version = "0.1.0"
description = "XiaoHongShu data extraction and processing tools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "rexq57"}
]
keywords = ["xiaohongshu", "data-extraction", "web-scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "loguru~=0.7.2",
    "openpyxl~=3.1.5", 
    "requests~=2.32.3",
    "pandas~=2.2.3",
    "beautifulsoup4~=4.12.3",
    "pillow~=11.0.0",
    "pycryptodome~=3.21.0",
    "aiofiles~=24.1.0",
    "typeguard~=4.4.1",
    "lxml~=5.3.0",
    "curl-cffi>=0.5.0",
    "opencv-python>=4.8.0",
    "pyDes~=2.0.1"
]

[project.urls]
Homepage = "https://github.com/rexq57/xhshow"
Repository = "https://github.com/rexq57/xhshow"
Issues = "https://github.com/rexq57/xhshow/issues"

[tool.setuptools]
packages = ["xhshow", "xhshow.xhs", "xhshow.encrypt", "xhshow.code", "xhshow.utils", "xhshow.config", "xhshow.schemas", "xhshow.extractor"]

[tool.setuptools.package-dir]
"xhshow" = "."
